[package]
name = "extauthz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
envoy-types = "0.2.0"
phf = { version = "0.11.2", features = ["macros"]}
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
tonic = "0.9.2"
tokio-cron-scheduler = "*"
tokio-stream = { version = "0.1.14", features = ["net"]}
